# nonebot-plugin-blocker

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: pypi-publish.yml  python-package.yml
nonebot_plugin_blocker/: __init__.py  __main__.py  config.py
nonebot_plugin_blocker/web/: __init__.py
nonebot_plugin_blocker/web/webpage/: main.html  main.js  style.css
