[project]
name = "nonebot-plugin-blocker"
version = "0.1.4"
description = "Message Blocker"
authors = [{ name = "MerCuJerry", email = "mercujerry@gmail.com" }]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.1.0",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/MerCuJerry/nonebot-plugin-blocker"